--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,7 @@
         "node": true,
         "jest": true
     },
+    "sourceType": "module",
     "extends": "eslint:recommended",
     "parserOptions": { 
         "ecmaVersion": 2022 
