--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "react-notifications": "^1.7.4",
     "react-router-dom": "^6.5.0",
     "react-scripts": "5.0.1",
+    "react-scroll-to-bottom": "^4.2.0",
     "react-simple-chatbot": "^0.6.1",
     "react-toastify": "^9.1.1",
     "remixicon": "^2.5.0",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.4",
+    "socket.io-client": "^4.6.1",
     "styled": "^1.0.0",
     "styled-components": "^4.4.1",
     "web-vitals": "^2.1.4"
